@@ -2,19 +2,19 @@ package com.codeborne.selenide;
 
 import com.codeborne.selenide.files.DownloadAction;
 import com.codeborne.selenide.files.FileFilter;
+import com.codeborne.selenide.files.FileFilters;
 import com.codeborne.selenide.impl.HasTimeout;
+import org.jspecify.annotations.Nullable;
 
-import javax.annotation.CheckReturnValue;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import javax.annotation.ParametersAreNonnullByDefault;
 import java.time.Duration;
+import java.util.stream.Stream;
 
 import static com.codeborne.selenide.files.DownloadActions.click;
 import static com.codeborne.selenide.files.FileFilters.none;
+import static java.util.stream.Collectors.joining;
 
-@ParametersAreNonnullByDefault
 public class DownloadOptions implements HasTimeout {
+  @Nullable
   private final FileDownloadMode method;
   @Nullable
   private final Duration timeout;
@@ -23,7 +23,7 @@ public class DownloadOptions implements HasTimeout {
   private final FileFilter filter;
   private final DownloadAction action;
 
-  private DownloadOptions(FileDownloadMode method, @Nullable Duration timeout, @Nullable Duration incrementTimeout,
+  private DownloadOptions(@Nullable FileDownloadMode method, @Nullable Duration timeout, @Nullable Duration incrementTimeout,
                           FileFilter filter, DownloadAction action) {
     this.method = method;
     this.timeout = timeout;
@@ -32,43 +32,38 @@ public class DownloadOptions implements HasTimeout {
     this.action = action;
   }
 
-  @CheckReturnValue
-  @Nonnull
+  @Nullable
   public FileDownloadMode getMethod() {
     return method;
   }
 
-  @CheckReturnValue
+  @Nullable
   @Override
   public Duration timeout() {
     return timeout;
   }
 
-  @CheckReturnValue
+  @Nullable
   public Duration incrementTimeout() {
     return incrementTimeout;
   }
 
-  @CheckReturnValue
-  @Nonnull
   public FileFilter getFilter() {
     return filter;
   }
 
-  @CheckReturnValue
-  @Nonnull
   public DownloadAction getAction() {
     return action;
   }
 
-  @CheckReturnValue
-  @Nonnull
+  public DownloadOptions withMethod(FileDownloadMode method) {
+    return new DownloadOptions(method, timeout, incrementTimeout, filter, action);
+  }
+
   public DownloadOptions withTimeout(long timeoutMs) {
     return new DownloadOptions(method, Duration.ofMillis(timeoutMs), incrementTimeout, filter, action);
   }
 
-  @CheckReturnValue
-  @Nonnull
   public DownloadOptions withTimeout(Duration timeout) {
     return new DownloadOptions(method, timeout, incrementTimeout, filter, action);
   }
@@ -87,16 +82,24 @@ public class DownloadOptions implements HasTimeout {
    *
    * @param incrementTimeout should be lesser than download timeout
    */
-  @CheckReturnValue
-  @Nonnull
   public DownloadOptions withIncrementTimeout(Duration incrementTimeout) {
     return new DownloadOptions(method, timeout, incrementTimeout, filter, action);
   }
 
-  @CheckReturnValue
-  @Nonnull
   public DownloadOptions withFilter(FileFilter filter) {
     return new DownloadOptions(method, timeout, incrementTimeout, filter, action);
+  }
+
+  public DownloadOptions withExtension(String extension) {
+    return new DownloadOptions(method, timeout, incrementTimeout, FileFilters.withExtension(extension), action);
+  }
+
+  public DownloadOptions withName(String fileName) {
+    return new DownloadOptions(method, timeout, incrementTimeout, FileFilters.withName(fileName), action);
+  }
+
+  public DownloadOptions withNameMatching(String fileNameRegex) {
+    return new DownloadOptions(method, timeout, incrementTimeout, FileFilters.withNameMatching(fileNameRegex), action);
   }
 
   /**
@@ -107,7 +110,6 @@ public class DownloadOptions implements HasTimeout {
    *
    * @param action any lambda accepting a Driver and WebElement (the element being clicked).
    * @return DownloadOptions
-   * @since 5.22.0
    */
   public DownloadOptions withAction(DownloadAction action) {
     return new DownloadOptions(method, timeout, incrementTimeout, filter, action);
@@ -115,19 +117,20 @@ public class DownloadOptions implements HasTimeout {
 
   @Override
   public String toString() {
-    if (timeout != null && !filter.isEmpty())
-      return String.format("method: %s, timeout: %s ms, filter:%s", method, timeout.toMillis(), filter.description());
-    else if (timeout != null)
-      return String.format("method: %s, timeout: %s ms", method, timeout.toMillis());
-    else if (!filter.isEmpty())
-      return String.format("method: %s, filter:%s", method, filter.description());
-    else
-      return String.format("method: %s", method);
+    return Stream.of(
+        method == null ? null : "method: %s".formatted(method.name()),
+        timeout == null ? null : "timeout: %s ms".formatted(timeout.toMillis()),
+        incrementTimeout == null ? null : "incrementTimeout: %s ms".formatted(incrementTimeout.toMillis()),
+        filter.isEmpty() ? null : filter.toString()
+      ).filter(p -> p != null)
+      .collect(joining(", "));
   }
 
-  @CheckReturnValue
-  @Nonnull
+  public static DownloadOptions file() {
+    return new DownloadOptions(null, null, null, none(), click());
+  }
+
   public static DownloadOptions using(FileDownloadMode method) {
-    return new DownloadOptions(method, null, null, none(), click());
+    return file().withMethod(method);
   }
 }
